--- a/Src/Products/PortraitDeMarie.html
+++ b/Src/Products/PortraitDeMarie.html
@@ -4,31 +4,16 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="style.css" />
+    <title>Document</title>
+    <link rel="stylesheet" href="/Src/ProductPage.css" />
+    <link rel="stylesheet" href="/Src/Style.css" />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
       integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65"
       crossorigin="anonymous"
     />
-    <title>Document</title>
   </head>
-
-  <body>
-    <!--
-    <div class="background">
-      <div class="flex-container">
-        <div class="flex-item"><p>Hi there!</p></div>
-        <a href="allPosters.html">
-          <div class="flex-item2">
-            <p><font color="black">Browse all posters</font></p>
-          </div>
-        </a>
-      </div>
-    </div>
-  -->
-
-  
   <header class="nav">
     <div class="logo">
       <a href="/Src/index.html">
@@ -67,36 +52,47 @@
         </div>
     </div>
 </header>
-
-
-  <div class="container-fluid p-0">
-    <div class="row">
-      <div class="col">
-        <div class="background">
-          <div class="flex-container">
-            <div class="flex-item"><p>Hi there!</p></div>
-            <a href="allPosters.html">
-              <div class="flex-item2">
-                <p><font color="black">Browse all posters</font></p>
-              </div>
-            </a>
+  <body>
+    <div class="container-fluid">
+      <div class="row">
+        <div class="col" id="prodimgcol">
+          <img
+            src="/Images/PortraitdeMarie-ThereseWalter.png"
+            class="img-fluid rounded mx-auto d-block"
+            id="prodimg"
+            alt=""
+          />
+        </div>
+        <div class="col mx-auto my-auto">
+          <h2 id="prodheader">Pablo Picasso</h2>
+          <h5 id="prodheader">Portrait de Marie-Therese Walter</h5>
+          <h6 id="price">300,00kr</h6>
+          <div id="prodtext" class="text-body">
+            <p>
+                The image of Marie-Therese brought an embodiment of femininity to the period of surrealism 
+                in Picasso’s art, it’s a kind of “a period within the period”. 
+                Tense and broken were replaced by round ones. A feminine body looked bouncy 
+                and soft at the same time, while a vivid color offered a contrast to smooth contours.
+            </p>
           </div>
+          <button type="button" class="btn btn-outline-primary" id="buy">
+            Add to cart
+          </button>
         </div>
       </div>
     </div>
-  </div>
-  
-
     <div id="product-section" class="container-fluid">
       <div id="section-header" class="row">
-        <div class="col"><h2 id="index-h2-header">New Posters</h2></div>
+        <div class="col">
+          <h2 id="index-h2-header">Posters you might also be interested in</h2>
+        </div>
       </div>
-      <div class="row justify-content-center">
+      <div class="row justify-content-center ">
         <div id="Posters" class="col">
           <div class="card border-0 bg-transparent" style="width: 18rem">
-            <a href="/Src/Products/ProductPage.html"
+            <a href="/Src/ProductPage.html"
               ><img
-                src="../Images/Hilma af Klint - The Ten Largest Childhood No. 2 Plakat.png"
+                src="/Images/Hilma af Klint - The Ten Largest Childhood No. 2 Plakat.png"
                 class="card-img-top"
                 alt="..."
             /></a>
@@ -119,70 +115,69 @@
         </div>
         <div id="Posters" class="col">
           <div class="card border-0 bg-transparent" style="width: 18rem">
-            <a href="/src/Products/KlorofylSelfPortrait.html"
+            <a href="/src/ProductPage.html"
               ><img
-                src="../Images/Screenshot 2023-02-21 at 19-51-39 SELF-PORTRAIT 02.png"
+                src="/Images/Skærmbillede 2023-03-03 kl. 15.00.02.png"
                 class="card-img-top"
                 alt="..."
             /></a>
             <div class="card-body bg-transparent">
               <h6 class="card-title my-0">
-                <a href="/src/Products/KlorofylSelfPortrait.html" id="link-text">Klorofyl</a>
+                <a href="/src/ProductPage.html" id="link-text">Pablo Picasso</a>
               </h6>
               <p class="card-text">
-                <a href="/src/ProductPage.html" id="link-text">SELF-PORTRAIT</a>
+                <a href="/src/ProductPage.html" id="link-text">Paix</a>
               </p>
-              <p class="card-text"><a href="" id="price-text">255,00 kr</a></p>
+              <p class="card-text"><a href="" id="price-text">150,00 kr</a></p>
             </div>
           </div>
         </div>
         <div id="Posters" class="col">
           <div class="card border-0 bg-transparent" style="width: 18rem">
-            <a href="/src/Products/MonetTheArtistsGaden.html"
+            <a href="/Src/Products/MonetTheArtistsGaden.html"
               ><img
-                src="../Images/Monet - The Artist's Garden at Vétheuil Plakat.png"
+                src="/Src/Products/MonetTheArtistsGaden.html"
                 class="card-img-top"
                 alt="..."
             /></a>
             <div class="card-body">
               <h6 class="card-title my-0">
-                <a href="/src/Products/MonetTheArtistsGaden.html" id="link-text">Monet</a>
+                <a href="/Src/Products/MonetTheArtistsGaden.html" id="link-text">Monet</a>
               </h6>
               <p class="card-text">
-                <a href="/src/Products/MonetTheArtistsGaden.html" id="link-text"
+                <a href="/Src/Products/MonetTheArtistsGaden.html" id="link-text"
                   >The Artist's Garden at Vétheuil</a
                 >
               </p>
               <p class="card-text">
-                <a href="/src/Products/MonetTheArtistsGaden.html" id="price-text">200,00 kr</a>
+                <a href="/Src/Products/MonetTheArtistsGaden.html" id="price-text">200,00 kr</a>
               </p>
             </div>
           </div>
         </div>
         <div id="Posters" class="col">
           <div class="card border-0 bg-transparent" style="width: 18rem">
-            <a href="/Src/Products/UnPoDiBlu.html"
+            <a href="/Src/Products/LifeAndLove.html"
               ><img
-                src="../Images/Un Po' Di Blu No2 Plakat.png"
+                src="/Images/LifeandLove.jpg"
                 class="card-img-top"
                 alt="..."
             /></a>
             <div class="card-body">
               <h6 class="card-title my-0">
-                <a href="/Src/ProductPage.html" id="link-text">Hmmm</a>
+                <a href="/Src/Products/LifeAndLove.html" id="link-text">William Morris</a>
               </h6>
               <p class="card-text">
-                <a href="/Src/ProductPage.html" id="link-text">Un Po' Di Blu</a>
+                <a href="/Src/Products/LifeAndLove.html" id="link-text">How can I get enough of life and love?</a>
               </p>
               <p class="card-text">
-                <a href="/Src/ProductPage.html" id="price-text">300,00 kr</a>
+                <a href="/Src/Products/LifeAndLove.html" id="price-text">150,00 kr</a>
               </p>
             </div>
           </div>
         </div>
       </div>
     </div>
-
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
