--- a/Src/Basket.html
+++ b/Src/Basket.html
@@ -60,7 +60,7 @@
         <div class="container h-100">
           <div class="row d-flex justify-content-center align-items-center h-100">
             <div class="col">
-              <p><span class="h2" id="message">Your Shopping Cart </span><span class="h4">(1 item in your cart)</span></p>
+              <p><span class="h2" id="message">Your Shopping Cart &nbsp </span><span class="h4">(1 item in your cart)</span></p>
       
               <div class="card mb-4">
                 <div class="card-body p-4">
@@ -96,10 +96,7 @@
                       </div>
                     </div>
                     <div class="col-md-2 d-flex justify-content-center">
-                      <div>
-                        <p class="small text-muted mb-4 pb-2">Total</p>
-                        <p class="lead fw-normal mb-0">250 kr</p>
-                      </div>
+                      <button type="button" class="btn btn-danger btn-rounded">Remove</button>
                     </div>
                   </div>
       
