--- a/Src/Products/LifeAndLove.html
+++ b/Src/Products/LifeAndLove.html
@@ -74,7 +74,7 @@
                 Since the mid-20th century Morris has been celebrated as a designer and craftsman.
             </p>
           </div>
-          <button type="button" class="btn btn-outline-primary" id="buy">
+          <button type="button" class="btn btn-outline-primary" id="buy" onclick = "addToCart(7)">
             Add to cart
           </button>
         </div>
@@ -177,6 +177,7 @@
         </div>
       </div>
     </div>
+    <script src = '/Src/App.js'></script>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
