--- a/Src/Products/MatisseBerggruen.html
+++ b/Src/Products/MatisseBerggruen.html
@@ -78,7 +78,7 @@
                  "Berggruen & Cie" is a must-have for any admirer of Matisse.
             </p>
           </div>
-          <button type="button" class="btn btn-outline-primary" id="buy">
+          <button type="button" class="btn btn-outline-primary" id="buy" onclick = "addToCart(2)">
             Add to cart
           </button>
         </div>
@@ -181,6 +181,7 @@
         </div>
       </div>
     </div>
+    <script src = '/Src/App.js'></script>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
