--- a/Src/Products/Paix.html
+++ b/Src/Products/Paix.html
@@ -76,7 +76,7 @@
                 Perfect for the minimalist and the art lover.
             </p>
           </div>
-          <button type="button" class="btn btn-outline-primary" id="buy">
+          <button type="button" class="btn btn-outline-primary" id="buy" onclick = "addToCart(10)">
             Add to cart
           </button>
         </div>
@@ -179,6 +179,7 @@
         </div>
       </div>
     </div>
+    <script src = '/Src/App.js'></script>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
