--- a/Src/Products/A.P.AtelierPeacock.html
+++ b/Src/Products/A.P.AtelierPeacock.html
@@ -31,7 +31,7 @@
        
     </div>
 
-    <div class="filterObjects monet impressionist a2">A.P. Atelier Peacock</div>
+   <!-- <div class="filterObjects monet impressionist a2"></div>-->
 
     <div class="information">
         <div class="login">
